@@ -154,8 +154,9 @@ void write_manifest_map(manifest_map const & man,
 			data & dat)
 {
   ostringstream sstr;
-  copy(man.begin(), man.end(),
-       ostream_iterator<entry>(sstr));
+  for (manifest_map::const_iterator i = man.begin();
+       i != man.end(); ++i)
+    sstr << *i;
   dat = sstr.str();
 }
 
@@ -163,8 +164,9 @@ void calculate_manifest_map_ident(manifest_map const & m,
 				  manifest_id & ident)
 {
   ostringstream sstr;
-  copy(m.begin(), m.end(),
-       ostream_iterator<entry>(sstr));
+  for (manifest_map::const_iterator i = m.begin();
+       i != m.end(); ++i)
+    sstr << *i;
   hexenc<id> tid;
   calculate_ident(data(sstr.str()), tid);
   ident = manifest_id(tid);
